last minute things

--- a/index.html
+++ b/index.html
@@ -1,177 +1,163 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Required meta tags -->
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Bootstrap CSS -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="css/index.css" />
+  <!-- Required meta tags -->
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>Hello, world!</title>
-  </head>
-  <body style="background-color: #fff7e9">
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-sm navbar-light fs fw-bold text-dark">
-      <a class="navbar-brand" href="#">
-        <img src="images/vintage.png" width="280" height="70" alt="" />
-      </a>
-      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="#">Speakers</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Tickets</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Venue</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+  <link rel="stylesheet" href="css/index.css" />
 
-    <!-- Jumbotron -->
-    <div
-      class="row-cols-auto bg-image"
-      style="background-color: #fff7e9; padding-bottom: 30px"
-    >
-      <img
-        id="banner"
-        class="img-fluid"
-        src="/images/banner.png"
-        alt=""
-        height="480"
-        style="margin-bottom: -200px"
-      />
-      <div class="text-center">
-        <h1>Welcome To Whow Knows Music Shows</h1>
-        <p>
-          Here at our company we strive to deliver the best music performances
-          all while growing with the community to foster a good taste in music
-          for all
-        </p>
-        <p>
-          We have been serving our community with good taste in music for the
-          past year
-        </p>
-        <p class="fw-bold">
-          Come experience the power of music Who Knows you might love it!
-        </p>
-        <button
-          class="btn btn-outline-light bg-primary"
-          style="flex"
-          type="button"
-        >
-          Get The Tickets
-        </button>
-      </div>
+  <title>Hello, world!</title>
+</head>
+
+<body style="background-color: #fff7e9">
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-sm navbar-light fs fw-bold text-dark">
+    <a class="navbar-brand" href="#">
+      <img src="images/vintage.png" width="280" height="70" alt="" />
+    </a>
+    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="#">Speakers</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Tickets</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Venue</a>
+        </li>
+      </ul>
     </div>
-    <!-- The Speakers -->
+  </nav>
+
+  <!-- Jumbotron -->
+  <div class="row-cols-auto bg-image" style="background-color: #fff7e9; padding-bottom: 30px">
+    <img id="banner" class="img-fluid" src="/images/banner.png" alt="" height="480" style="margin-bottom: -200px" />
     <div class="text-center">
-      <h1 id="header">Music Performers</h1>
-      <p>Coming Next To The Who Know Venue</p>
+      <h1>Welcome To Whow Knows Music Shows</h1>
+      <p>
+        Here at our company we strive to deliver the best music performances
+        all while growing with the community to foster a good taste in music
+        for all
+      </p>
+      <p>
+        We have been serving our community with good taste in music for the
+        past year
+      </p>
+      <p class="fw-bold">
+        Come experience the power of music Who Knows you might love it!
+      </p>
+      <button class="btn btn-outline-light bg-primary" type="button">
+        Get The Tickets
+      </button>
     </div>
-    <!-- artist one -->
-    <div class="col text-center">
-      <div class="row">
-        <div class="col">
-          <img id="artist" src="/images/first.jpeg" alt="" />
-          <h1>Who Is</h1>
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi
-            assumenda autem atque consequuntur corporis pariatur voluptate rem
-            ullam? Nisi fugit sit voluptatem ut molestiae, a quod eos aspernatur
-            eveniet aliquam.
-          </p>
-        </div>
-        <!-- artist two -->
-        <div class="col">
-          <img id="artist" src="/images/second.jpeg" alt="" />
-          <h1>Who Are</h1>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
-            natus recusandae harum ex repellat quas rerum asperiores, impedit
-            nam et beatae laborum reprehenderit pariatur reiciendis blanditiis
-            magnam libero quia a!
-          </p>
-        </div>
-        <!-- artist three -->
-        <div class="col">
-          <img id="artist" src="/images/third.jpeg" alt="" />
-          <h1>Who Be</h1>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum,
-            consequatur modi, veritatis deserunt voluptates enim repudiandae
-            amet molestias, illum cumque voluptas! Sequi necessitatibus
-            reprehenderit, eum nemo quibusdam voluptatum ex tempora.
-          </p>
-        </div>
-        <!-- artist four -->
-        <div class="col">
-          <img id="artist" src="/images/fourth.jpeg" alt="" />
-          <h1>Who Be</h1>
-          <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eveniet a
-            harum itaque dolor beatae error impedit ex, eius provident
-            voluptatem similique voluptates alias quisquam totam distinctio
-            maxime necessitatibus, expedita aliquid!
-          </p>
-        </div>
+  </div>
+  <!-- The Speakers -->
+  <div class="text-center" style="margin-top: 100px;">
+    <h1 id="header">Music Performers</h1>
+    <p>Coming Next To The Who Know Venue</p>
+  </div>
+  <!-- artist one -->
+  <div class="col text-center" style="margin-bottom: 100px;">
+    <div class="row">
+      <div class="col">
+        <img id="artist" src="/images/first.jpeg" alt="" />
+        <h1>Who Is</h1>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi
+          assumenda autem atque consequuntur corporis pariatur voluptate rem
+          ullam? Nisi fugit sit voluptatem ut molestiae, a quod eos aspernatur
+          eveniet aliquam.
+        </p>
+      </div>
+      <!-- artist two -->
+      <div class="col">
+        <img id="artist" src="/images/second.jpeg" alt="" />
+        <h1>Who Are</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
+          natus recusandae harum ex repellat quas rerum asperiores, impedit
+          nam et beatae laborum reprehenderit pariatur reiciendis blanditiis
+          magnam libero quia a!
+        </p>
+      </div>
+      <!-- artist three -->
+      <div class="col">
+        <img id="artist" src="/images/third.jpeg" alt="" />
+        <h1>Who Be</h1>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum,
+          consequatur modi, veritatis deserunt voluptates enim repudiandae
+          amet molestias, illum cumque voluptas! Sequi necessitatibus
+          reprehenderit, eum nemo quibusdam voluptatum ex tempora.
+        </p>
+      </div>
+      <!-- artist four -->
+      <div class="col">
+        <img id="artist" src="/images/fourth.jpeg" alt="" />
+        <h1>Who Be</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eveniet a
+          harum itaque dolor beatae error impedit ex, eius provident
+          voluptatem similique voluptates alias quisquam totam distinctio
+          maxime necessitatibus, expedita aliquid!
+        </p>
       </div>
     </div>
+  </div>
 
-    <!-- maps -->
-    <div class="row justify-content-center" style="background-color: #fff7e9">
-      <div class="col-12 text-center p-4">
-        <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3197.6780956879525!2d-119.79672228429843!3d36.73029157933063!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8094609f974dced1%3A0xa33bec7e882c8b17!2sChef%20Paul&#39;s%20Cafe!5e0!3m2!1sen!2sus!4v1638334207594!5m2!1sen!2sus"
-          width="500"
-          height="400"
-          allowfullscreen=""
-          loading="lazy"
-          ;
-        ></iframe>
-      </div>
+  <!-- maps -->
+  <div class="container-fluid">
+  <div class="row">
+    <div class="col-6 text-center">
+      <h1>Meet our Venue</h1>
+      <p class="text-start" style=" padding: 10px 30px 0px 40px; ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis, alias! Delectus temporibus earum eveniet, facere tempora rerum illum quod omnis molestias, sunt perspiciatis repudiandae quo, alias odit. Magnam, nemo laborum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt a rerum ipsum quos reiciendis expedita consectetur. Asperiores quas in, officiis at perspiciatis magni odio est porro culpa. Suscipit, iste iusto! </p>
+      <img src="/images/venue.jpeg" alt="" style="height: 50vh; margin-bottom: 30px;">
     </div>
- 
-    <!-- footer -->
-    <footer>
-      <div class="row col">
-        <ul class="list-group list-group-horizontal list-unstyled justify-content-lg-evenly col-1" style="padding: 20px;">
-          <li><a href="https://twitter.com/"><img src="/images/2021 Twitter logo - black.png" alt="" style="height: 3vh;"></a></li>
-          <li><a href="https://instagram.com/"><img src="/images/instagram.png" alt="" style="height: 3vh;"></a></li>
-          <li><a href="https://facebook.com/"><img src="/images/facebook.png" alt="" style="height: 3vh;"></a></li>
-        </ul>
+    <div class="row col-6 text-center p-4 align-content-center">
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3197.6780956879525!2d-119.79672228429843!3d36.73029157933063!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8094609f974dced1%3A0xa33bec7e882c8b17!2sChef%20Paul&#39;s%20Cafe!5e0!3m2!1sen!2sus!4v1638334207594!5m2!1sen!2sus"
+        width="500" height="400" allowfullscreen="" loading="lazy" ;></iframe>
+    </div>
+  </div>
+
+
+  <!-- footer -->
+  <footer>
+    <div class="row col">
+      <ul class="list-group list-group-horizontal list-unstyled justify-content-lg-evenly col-1" style="padding: 20px;">
+        <li><a href="https://twitter.com/"><img src="/images/2021 Twitter logo - black.png" alt=""
+              style="height: 3vh;"></a></li>
+        <li><a href="https://instagram.com/"><img src="/images/instagram.png" alt="" style="height: 3vh;"></a></li>
+        <li><a href="https://facebook.com/"><img src="/images/facebook.png" alt="" style="height: 3vh;"></a></li>
+      </ul>
       <div class="row col-11 text-end align-content-center">
         <p>Copyright 2021</p>
       </div>
-      </div>
-    </footer>
+    </div>
+  </footer>
 
-    <!-- Optional JavaScript; choose one of the two! -->
+  <!-- Optional JavaScript; choose one of the two! -->
 
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-      crossorigin="anonymous"
-    ></script>
+  <!-- Option 1: Bootstrap Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
 
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
+  <!-- Option 2: Separate Popper and Bootstrap JS -->
+  <!--
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     -->
-  </body>
+</body>
+
 </html>
